# Controle-optimal

./: .gitignore  CMakeLists.txt
lib/math/: gradient.h  gradient_descent.h  lma.h  momentum_descent.h  ogm1.h
lib/solver/: solver.h
python/: condensateur.py
src/: ascent_profile_1.cpp  ascent_profile_drag.cpp  ascent_profile_drag_2.cpp  ascent_profile_no_drag.cpp  ascent_profile_satV.cpp  spin.cpp
